Removed CMS related arguments.
CMSIncrementalMode was deprecated in an earlier version of Java and has been removed since Java 9.