@@ -148,7 +148,7 @@ public class MinecraftGameRunner
             processBuilder.withArguments(profileArgs.split(" "));
         } else {
             boolean is32Bit = "32".equals(System.getProperty("sun.arch.data.model"));
-            String defaultArgument = is32Bit ? "-Xmx512M -XX:+UseConcMarkSweepGC -XX:+CMSIncrementalMode -XX:-UseAdaptiveSizePolicy -Xmn128M" : "-Xmx1G -XX:+UseConcMarkSweepGC -XX:+CMSIncrementalMode -XX:-UseAdaptiveSizePolicy -Xmn128M";
+            String defaultArgument = is32Bit ? "-Xmx512M -XX:+UseG1GC -Xmn128M" : "-Xmx1G -XX:+UseG1GC -Xmn128M";
             processBuilder.withArguments(defaultArgument.split(" "));
         }
         processBuilder.withArguments(new String[]{"-Djava.library.path=" + this.nativeDir.getAbsolutePath()});
