@@ -71,7 +71,7 @@ public class ProfileJavaPanel
             this.javaArgsField.setText(args);
         } else {
             this.javaArgsCustom.setSelected(false);
-            this.javaArgsField.setText("-Xmx1G -XX:+UseConcMarkSweepGC -XX:+CMSIncrementalMode -XX:-UseAdaptiveSizePolicy -Xmn128M");
+            this.javaArgsField.setText("-Xmx1G -XX:+UseG1GC -Xmn128M");
         }
         updateJavaArgsState();
     }
